Alignment Fix

--- a/umbrella-cutomizer/src/components/ImageEditor/index.module.css
+++ b/umbrella-cutomizer/src/components/ImageEditor/index.module.css
@@ -21,7 +21,7 @@
   font-size: 20px;
   padding: 20px;
   text-align: center;
-  left:-24vw;
+  left:-25vw;
   top: 65vh;
 }
 
